--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1249,6 +1249,14 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{nist_pqc_security,
+  author       = "{National Institute of Standards and Technology (NIST)}",
+  title        = "Security (Evaluation Criteria) - Post-Quantum Cryptography Standardization",
+  year         = "2025",
+  howpublished = "\url{https://csrc.nist.gov/projects/post-quantum-cryptography/post-quantum-cryptography-standardization/evaluation-criteria/security-(evaluation-criteria)}",
+  note         = "Accessed: 2025-01-16"
+}
+
 
 @inproceedings{DBLP:conf/ctrsa/HaleviR04,
   author       = {Shai Halevi and
