--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -15,7 +15,7 @@
 
 % Custom commands
 \newcommand{\pke}{\texttt{PKE}}
-\newcommand{\keygen}{\texttt{KeyGen}}
+\newcommand{\keygen}{\texttt{Gen}}
 \newcommand{\encrypt}{\texttt{Enc}}
 \newcommand{\decrypt}{\texttt{Dec}}
 \newcommand{\kem}{\texttt{KEM}}
@@ -224,7 +224,7 @@ The advantage $\adv_\texttt{EUF-CMA}$ of the existential forgery adversary is th
 
 % \section{Encrypt-then-MAC: new generic IND-CCA KEM transformation}\label{sec:the-encrypt-then-mac-transformation}
 \section{The encrypt-then-MAC transformation}\label{sec:the-encrypt-then-mac-transformation}
-\paragraph{Our technique.} We introduce our encrypt-then-MAC transformation that transforms a OW-PCA secure PKE and an one-time existentially unforgeable MAC into an IND-CCA secure KEM. Our scheme mainly differs from DHIES in its versatility and input requirement. Whereas the IND-CCA security of DHIES reduces specifically to the Gap Diffie-Hellman assumption, the chosen-ciphertext security of the encrypt-then-MAC KEM reduces more generally to the OW-PCA security \cite{DBLP:conf/ctrsa/OkamotoP01} of the input scheme. In addition, we propose that because each call to encapsulation samples a fresh PKE plaintext, the encrypt-then-MAC KEM can be instantiated with one-time secure MAC such as Poly1305 for further performance improvements (Abdalla, Rogaway, and Bellare originally proposed to use HMAC and CBC-MAC, which are many-time secure MAC but less efficient than one-time MAC, see Section \ref{sec:choosing-a-message-authenticator}). The encapsulation data flow is illustrated in Figure \ref{fig:etm-diagram}.
+\paragraph{Our technique.} We introduce our encrypt-then-MAC transformation that transforms a OW-PCA secure PKE and an one-time existentially unforgeable MAC into an IND-CCA secure KEM. The encapsulation data flow is illustrated in Figure \ref{fig:etm-diagram}.
 
 \begin{figure}[H]
     \centering
@@ -261,7 +261,7 @@ Let $\mathcal{B}^\ast$ denote the set of finite bit strings. Let $\pke(\keygen, 
 
 \begin{figure}[H]
     \centering
-    \begin{minipage}[t]{0.5\textwidth}
+    \begin{minipage}[t]{0.31\textwidth}
         \begin{algorithm}[H]
             \caption*{$\kem_\etm.\keygen()$}
             \begin{algorithmic}[1]
@@ -271,6 +271,8 @@ Let $\mathcal{B}^\ast$ denote the set of finite bit strings. Let $\pke(\keygen, 
                 \State \Return $(\pk, \sk)$
             \end{algorithmic}
         \end{algorithm}
+    \end{minipage}\hfill
+    \begin{minipage}[t]{0.31\textwidth}
         \begin{algorithm}[H]
             \caption*{$\kem_\etm.\encap(\pk)$}
             \begin{algorithmic}[1]
@@ -284,7 +286,7 @@ Let $\mathcal{B}^\ast$ denote the set of finite bit strings. Let $\pke(\keygen, 
             \end{algorithmic}
         \end{algorithm}
     \end{minipage}\hfill
-    \begin{minipage}[t]{0.49\textwidth}
+    \begin{minipage}[t]{0.35\textwidth}
         \begin{algorithm}[H]
             \caption*{$\kem_\etm.\decap(\sk, c)$}
             \begin{algorithmic}[1]
@@ -540,7 +542,45 @@ A OW-PCA adversary can then simulate the modified IND-CCA game for the KEM adver
 \end{proof}
 
 \subsection{Concrete cryptanalysis}\label{sec:concrete-cryptanalysis}
-\paragraph{PCA security.} The security notion of \textit{One-wayness under plaintext-checking attack (OW-PCA)} was introduced by Okamoto and Pointcheval in \cite{DBLP:conf/ctrsa/OkamotoP01}, where the authors reduced the security of a generic CCA secure transformation (REACT) to the OW-PCA security of the input public-key cryptosystem. Following REACT, Pointcheval et al. proposed GEM \cite{DBLP:conf/ctrsa/CoronHJPPT02}, another generic CCA secure transformation whose security reduces to the OW-PCA security of the underlying PKE. Around the time REACT and GEM were published, the best known CCA secure transformation is Optimal Asymmetric Encryption Padding \cite{DBLP:conf/eurocrypt/BellareR94}. Compared to OAEP's requirement for one-way trapdoor permutation, OW-PCA security is easier to achieve: any one-way trapdoor permutation (such as RSA) is automatically OW-PCA secure, and the ElGamal cryptosystem is OW-PCA secure under the Gap Diffie-Hellman assumption \cite{DBLP:conf/pkc/OkamotoP01}. More recently, the modular Fujisaki-Okamoto transformation \cite{DBLP:conf/tcc/HofheinzHK17} proposed CCA secure KEM whose security reduces to the OW-PCA security of the input PKE under both ROM and QROM.
+\paragraph{PCA security.} The security notion of \textit{One-wayness under plaintext-checking attack (OW-PCA)} was introduced by Okamoto and Pointcheval in \cite{DBLP:conf/ctrsa/OkamotoP01}, where the authors reduced the security of a generic CCA secure transformation (REACT) to the OW-PCA security of the input public-key cryptosystem. Following REACT, Pointcheval et al. proposed GEM \cite{DBLP:conf/ctrsa/CoronHJPPT02}, another generic CCA secure transformation whose security reduces to the OW-PCA security of the underlying PKE. Around the time REACT and GEM were published, the best known CCA secure transformation is Optimal Asymmetric Encryption Padding (OAEP)\cite{DBLP:conf/eurocrypt/BellareR94}. Compared to OAEP's requirement for one-way trapdoor permutation, OW-PCA security is strictly easier to achieve: any one-way trapdoor permutation (such as RSA) is automatically OW-PCA secure (Figure \ref{fig:pco-trapdoor-perm}), while there are cryptosystems that are OW-PCA secure but not one-way trapdoor permutation (Table \ref{tbl:ow-pca-candidates}). More recently, the modular Fujisaki-Okamoto transformation \cite{DBLP:conf/tcc/HofheinzHK17} proposed CCA secure KEM whose security reduces to the OW-PCA security of the input PKE under both ROM and QROM.
+
+\begin{figure}[h]
+    \centering
+
+    \begin{minipage}[t]{0.5\textwidth}
+    \begin{algorithm}[H]
+        \caption*{\pco(m, c)}
+        \begin{algorithmic}[1]
+            \State \Return $\llbrack \encrypt(\pk, m) = c \rrbrack$
+        \end{algorithmic}
+    \end{algorithm}
+    \end{minipage}
+
+    \caption{If $\pke(\keygen, \encrypt, \decrypt)$ is an one-way trapdoor permutation, then for all $(\pk, \sk) \leftarrow \keygen()$, $\decrypt(\sk, c) = m$ if and only if $\encrypt(\pk, m) = c$}\label{fig:pco-trapdoor-perm}
+\end{figure}
+
+\begin{table}
+    \centering
+    \begin{tabular}{|p{17em}|p{12em}|}
+        \hline
+        \centering\textbf{PKE} & \textbf{is it OW-PCA?} \\
+        \hline
+        RSA & Yes \\
+        \hline
+        ElGamal & If Gap Diffie-Hellman assumption holds \\
+        \hline
+        Kyber/Saber/FrodoKEM/NTRU & No \\
+        \hline
+        HQC & No \\
+        \hline
+        BIKE (with MDPC) & No \\
+        \hline
+        Classic McEliece (binary Goppa code) & unknown, but there is no known attack \\
+        \hline
+        
+    \end{tabular}
+    \caption{The landscape of OW-PCA security}\label{tbl:ow-pca-candidates}
+\end{table}
 
 There have been numerous attempts at constructing plaintext-checking attacks on post-quantum KEMs submitted to NIST's PQC projects. Due to the search-decision equivalence of the Ring/Module Learning With Error problem, lattice-based cryptosystems including Kyber, Saber, FrodoKEM, and NTRU Prime are all vulnerable to similar key-recovery plaintext-checking attacks (KR-PCA)\cite{DBLP:conf/crypto/00010N20,DBLP:journals/tches/RaviRCB20,DBLP:journals/tches/UenoXTITH22,DBLP:journals/tches/TanakaUXITH23}. KR-PCA against NTRU-HRSS/NTRU-HPS can be adapted from \cite{Hoffstein1999,DBLP:conf/crypto/JaulmesJ00,cryptoeprint:2019/1022,cryptoeprint:2021/168}. Among code-based KEMs, HQC has similar structure with LWE-based cryptosystems, so similar KR-PCA applies \cite{DBLP:conf/acns/Huguenin-Dumittan20}. BIKE and Classical McEliece are both based on the Niederreiter cryptosystem, although BIKE is instantiated using Moderate-Density Parity Check (MDPC) code, which was also vulnerable to KR-PCA \cite{DBLP:conf/asiacrypt/Guo0S16}. There are many reaction attacks (also called ciphertext-validation attack) \cite{DBLP:conf/icics/HallGS99}, where an adversary flips chosen bits of the ciphertext and learns the locations of the error bits by observing whether the modified ciphertext incurs decryption failures. However, there is no known way of converting such reaction attacks to a plaintext-checking attacks. In other words, there no known plaintext-checking attack against the Niedereitter cryptosystem using binary Goppa code.
 
@@ -548,11 +588,20 @@ There have been numerous attempts at constructing plaintext-checking attacks on 
 
 One straightforward fix is to derive the MAC key from hashing both the randomly sampled plaintext and the public key (large public key can be pre-hashed during key generation and added to the keypair). This increases the cost of the plaintext recovery attack since the attacker will need to compute one lookup table per keypair. However, long-term keypairs used in KEM-DEM combination for bulk encryption (e.g. disk encryption or email encryption) might still have sufficiently long lifespan to be vulnerable to dictionary attack. In this case, we propose salting the hash $k \leftarrow G(\pk \Vert m \Vert \text{salt})$, then appending the salt to the ciphertext. At the cost of increasing ciphertext size by the salt size, the cost of dictionary attack can be raised further.
 
-\paragraph{Forgery attack on MAC tag.} With modern MAC constructions such as Carter-Wegman MAC, CMAC, and HMAC, an adversary has no better forgery method than brute-force all possible tags. Although the security evaluation criteria in NIST's PQC project limits chosen-ciphertext attack adversaries to no more than $2^{64}$ classical decapsulation queries, having a relatively small tag size (e.g. Poly1305, GMAC, CMAC all use 128-bit tag size) might still present cryptographic weakness. Among existing popular MAC constructions, HMAC and KMAC-256 can straightforwardly increase the tag size with appropriate choices of parameters. Scaling CMAC will require a secure pseudorandom function with lengthier output, and although methods of converting $n$-bit block cipher into $mn$-bit block cipher exist \cite{DBLP:conf/ctrsa/HaleviR04}, they remain unproven in real-world usage. This is also the reason why scaling Carter-Wegman MAC $\mac(k=(k_1, k_2), m) = H_\text{xpoly}(k_1, m) \oplus \operatorname{PRF}(k_2, r)$ is also not straightforward. However, notice that honest parties executing the encapsulation routine samples fresh plaintext per encapsulation; assuming sufficiently high-quality source of randomness and cryptographically strong hash functions, there should be no repetition of plaintext, thus no repetition of MAC keys. The CCA security game does not include a signing oracle, either. In other words, we can safely assume that each MAC key will only be used once, meaning that we can use one-time MAC such as keyed polynomial hash functions (i.e. Carter-Wegman MAC without PRF). In addition to being computationally more efficient, polynomial hash function is also easy to scale up in security by switching to a larger finite field.
+\paragraph{Forgery attack on MAC tag.} With modern MAC constructions such as Poly1305, an adversary has no better method of forging tags under unknown key than blind guesses. Although the security evaluation criteria in NIST's PQC project limits chosen-ciphertext attack adversaries to no more than $2^{64}$ classical decapsulation queries \cite{nist_pqc_security}, having a relatively small tag size (e.g. Poly1305, GMAC, CMAC all use 128-bit tag size) might still present cryptographic weakness. Among existing popular MAC constructions, HMAC and KMAC-256 can straightforwardly increase the tag size with appropriate choices of parameters. Scaling CMAC will require a secure pseudorandom function with lengthier output, and although methods of converting $n$-bit block cipher into $mn$-bit block cipher exist \cite{DBLP:conf/ctrsa/HaleviR04}, they remain unproven in real-world usage. Scaling Carter-Wegman MACs (e.g. Poly1305 and GMAC) is relatively straightforward: first the universal hash function needs to operate on a larger finite field, then the pseudorandom function needs to output longer bit strings.
 
+\paragraph{One-time MAC.} Under the ROM, a uniformly random plaintext is sampled at every encapsulation, which is then hashed into a uniformly random MAC key. In practice, this means that if the implementation has a high-quality source of randomness, the underlying PKE's plaintext space is sufficiently large, and the hash function is collision resistance, then within some reasonable limit of number of encapsulations, the probability of signing distinct ciphertext with identical MAC key is negligible. Furthermore, within the standard IND-CCA security model, an adversary does not have access to a signing oracle or other methods of obtaining MAC tag under unknown symmetric key. Consequently, using a one-time MAC should not affect the security of the transformed KEM. On the other hand, one-time MACs are usually significantly more efficient than many-time MACs, which can lead to small but meaningful speedup in both encapsulation and decapsulation.
+
+\paragraph{Maintaining randomization}
+
+\paragraph{Deriving shared secret}
+
+\paragraph{Side-channel attacks}
+
+\paragraph{Ephemeral key exchange?}
 
 \section{Application to ElGamal cryptosystem}\label{sec:application-to-elgamal}
-We show that the DHAES/DHIES hybrid encryption scheme is a special case of the encrypt-then-MAC transformation. Specifically, we will sketch a proof of the following lemma:
+Applying the encrypt-then-MAC KEM transformation to the ElGamal cryptosystem results in a construction that is highly similar to DHIES/DHAES. We show that the DHAES/DHIES hybrid encryption scheme is a special case of the encrypt-then-MAC transformation. Specifically, we will sketch a proof of the following lemma:
 
 \begin{lemma}\label{lemma:elgamal-is-ow-pca}
     For every OW-PCA adversary $A$ against the ElGamal cryptosystem, there exists a Gap Diffie-Hellman problem solver $B$ such that:
@@ -873,7 +922,7 @@ We apply the encrypt-then-MAC KEM transformation to the the OW-CPA subroutines $
 
 We implemented \texttt{mceliece+} by modifying the reference implementation. MAC implementations are taken from OpenSSL. C code is compiled using Apple Clang 15.0.0. Performance measurement is run on Apple Silicon M1 chip. CPU clock is measured using kernel clock \texttt{mach\_absolute\_time}. Each rouine is run 10000 times, with median time reported in Table \ref{tbl:mceliece-plus-performance}.
 
-\begin{table}[h]
+\begin{table}[H]
     \centering
     % \footnotesize
     \begin{tabular}[c]{|c|c|c|c|}
